# rustatio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hk.pkl  mise.toml
.github/workflows/: release.yml
rustatio-cli/src/: cli.rs  main.rs  runner.rs
rustatio-core/: Cargo.toml
rustatio-core/src/: config.rs  faker.rs  lib.rs  logger.rs
rustatio-core/src/protocol/: bencode.rs  tracker.rs
rustatio-core/src/torrent/: info.rs
rustatio-desktop/: Cargo.toml
rustatio-desktop/src/: main.rs
rustatio-desktop/src/commands/: faker.rs  grid.rs
rustatio-server/src/: main.rs
rustatio-server/src/api/routes/: config.rs  network.rs
rustatio-server/src/services/: mod.rs  state.rs  vpn_port_sync.rs
rustatio-watch/src/: engine.rs
ui/: package-lock.json
ui/src/: App.svelte
ui/src/components/common/: AuthPage.svelte  ConfirmDialog.svelte  ThemeIcon.svelte  TorrentSelector.svelte
ui/src/components/config/: ConfigurationForm.svelte  StopConditionSettings.svelte  StopConditions.svelte
ui/src/components/grid/: GridImportDialog.svelte  GridTable.svelte  GridToolbar.svelte  GridView.svelte
ui/src/components/layout/: NetworkStatus.svelte  SettingsDialog.svelte  Sidebar.svelte
ui/src/lib/: instanceStore.js
ui/src/lib/components/common/: InlineHelp.svelte
ui/src/lib/presets/: balanced.json  fast.json  stealth.json
